@@ -1,7 +1,9 @@
 Version 0.9.1 [not released yet]
 
     Added return value for xml::init methods setting various boolean flags:
-    they now return the previous state of the flag.
+    they now return the previous state of the flag. Also add
+    xml::init::change_flag helper to facilitate temporarily changing some
+    global flag.
 
 Version 0.9.0
 
